chore: refactor some code for better readability